--- a/manifest.json
+++ b/manifest.json
@@ -9,13 +9,13 @@
   "theme_color": "#020617",
   "icons": [
     {
-      "src": "https://raw.githubusercontent.com/lucas-dantas-dev/assets/main/icon-192.png",
+      "src": "https://lh3.googleusercontent.com/d/1suIG32h-jC6OdCnx5Xfz9CzGi7gKqEkO",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://raw.githubusercontent.com/lucas-dantas-dev/assets/main/icon-512.png",
+      "src": "https://lh3.googleusercontent.com/d/1suIG32h-jC6OdCnx5Xfz9CzGi7gKqEkO",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
