feat: Improve push notification handling
Refactor push notification logic to use endpoint as primary key and remove environment variables for VAPID keys, embedding them directly. Update Service Worker registration scope and add explicit update calls for better PWA behavior.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-VITE_VAPID_PUBLIC_KEY=
-VAPID_PUBLIC=
-VAPID_PRIVATE=
+# .env.example
+# Nenhuma variável necessária - chaves embutidas para facilidade
